maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:9: error: not enough arguments for method KeepHandOnSideWall: (i: Int)Int.
Unspecified value parameter i.
        sommeAngle = KeepHandOnSideWall()
                                       ^